# example-linux-libs

./: .gitignore  CMakeLists.txt  CMakePresets.json  hello.c  hello.h  main.c
script/: objdump_run.sh
